[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
dashmap = "5.5.3"
enum_dispatch = "0.3.13"
tokio = { version = "1", features = ["net", "io-util", "rt", "tokio-macros", "sync", "macros", "rt-multi-thread"] }
bytes = "1.6.0"
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = { version = "0.3.30", default-features = false }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
regex = "1.0"
